--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "bot-whatsapp",
+  "name": "whatsapp-bot",
   "version": "1.0.0",
+  "description": "Bot do WhatsApp para Clínica Valore",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.22.1",
+    "whatsapp-web.js": "^1.20.0",
     "qrcode-terminal": "^0.12.0"
   }
 }
